--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Arkansas -- Fiction'
 - !lcsh 'Plantation life -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: An Arkansas Planter
 url: http://www.gutenberg.org/ebooks/19107
